feat(admin): add runtime feature management GUI