@@ -2,18 +2,13 @@ package com.nyarutoru.nekoplugin.api.recipe;
 
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.concurrent.CopyOnWriteArrayList;
 
-/**
- * Recipe API for custom crafting recipes.
- * Supports both shaped and shapeless recipes with custom ItemStack results.
- */
+/** Registry and matcher for custom crafting recipes. */
 public class RecipeAPI {
-
     private static volatile RecipeAPI instance;
-    // Thread-safe list for recipes
     private final List<CustomRecipe> recipes = new CopyOnWriteArrayList<>();
 
     private RecipeAPI() {
@@ -22,41 +17,50 @@ public class RecipeAPI {
     public static RecipeAPI getInstance() {
         if (instance == null) {
             synchronized (RecipeAPI.class) {
-                if (instance == null) {
-                    instance = new RecipeAPI();
-                }
+                if (instance == null) instance = new RecipeAPI();
             }
         }
         return instance;
     }
 
     /**
-     * Register a custom recipe.
+     * Registers a recipe once by ID. Re-registering the same ID replaces it in-place,
+     * preserving deterministic recipe priority across feature reloads.
      */
-    public void registerRecipe(CustomRecipe recipe) {
+    public synchronized void registerRecipe(CustomRecipe recipe) {
+        Objects.requireNonNull(recipe, "recipe");
+        String id = Objects.requireNonNull(recipe.getId(), "recipe id");
+        for (int i = 0; i < recipes.size(); i++) {
+            if (recipes.get(i).getId().equals(id)) {
+                recipes.set(i, recipe);
+                return;
+            }
+        }
         recipes.add(recipe);
     }
 
-    /**
-     * Find a matching recipe for the given crafting grid.
-     *
-     * @param grid 9-element array representing 3x3 crafting grid
-     * @return Matching recipe result, or null if no match
-     */
+    public synchronized boolean unregisterRecipe(String id) {
+        Objects.requireNonNull(id, "id");
+        return recipes.removeIf(recipe -> recipe.getId().equals(id));
+    }
+
+    public synchronized boolean unregisterRecipe(CustomRecipe recipe) {
+        return recipe != null && unregisterRecipe(recipe.getId());
+    }
+
+    public void clear() {
+        recipes.clear();
+    }
+
     public ItemStack findMatchingRecipe(ItemStack[] grid) {
         for (CustomRecipe recipe : recipes) {
-            if (recipe.matches(grid)) {
-                // Use getResult(grid) to apply any result transformers
-                return recipe.getResult(grid);
-            }
+            if (recipe.matches(grid)) return recipe.getResult(grid);
         }
         return null;
     }
 
-    /**
-     * Get all registered recipes.
-     */
+    /** Returns an immutable snapshot. */
     public List<CustomRecipe> getAllRecipes() {
-        return Collections.unmodifiableList(recipes);
+        return List.copyOf(recipes);
     }
 }
